[package]
name = "tetris_with_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.3", features = ["canvas", "tokio"]}
iced_native = "0.4"
iced_futures = "0.3"
chrono = "0.4"
rand = "0.8"


shuffle = { git = "https://github.com/adambudziak/shuffle.git", rev = "a0903d7aecd50b3f915bf2960b73a251336e490a"}
